[gd_scene load_steps=6 format=3 uid="uid://bwm2ufvhpxo6j"]

[ext_resource type="Script" path="res://Scripts/Level Scripts/LevelScript.gd" id="1_7uubd"]
[ext_resource type="AudioStream" uid="uid://bxwt5a60p3vx4" path="res://Assets/Audio/untitled.wav" id="3_s81hi"]
[ext_resource type="Texture2D" uid="uid://c5uvicg0uo82v" path="res://Assets/Untitled design.png" id="6_3w5nb"]
[ext_resource type="Texture2D" uid="uid://bpd1degkpps1x" path="res://Assets/Arrow-removebg-preview.png" id="7_amb55"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_aqloa"]

[node name="MainMenu" type="Control" node_paths=PackedStringArray("controlsMenu", "mainMenu")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7uubd")
next_level_name = "1"
controlsMenu = NodePath("Controls")
mainMenu = NodePath("Main")

[node name="Main" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="Main"]
modulate = Color(0, 0, 0, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -10.0
offset_top = -13.0
offset_right = 7.0
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_aqloa")

[node name="Label" type="Label" parent="Main"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -282.5
offset_right = 282.5
offset_bottom = 69.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 32
text = "Torch's Conquest: Depths of Shadow"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="Main"]
custom_minimum_size = Vector2(250, 100)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -125.0
offset_top = -80.0
offset_right = 125.0
offset_bottom = 129.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Main/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="Separator3" type="Control" parent="Main/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="PlayButton" type="Button" parent="Main/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_stretch_ratio = 0.0
theme_override_font_sizes/font_size = 32
text = "New Game"

[node name="Separator" type="Control" parent="Main/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 5)
layout_mode = 2

[node name="ControlsButton" type="Button" parent="Main/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Controls"

[node name="Separator2" type="Control" parent="Main/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 5)
layout_mode = 2

[node name="ExitButton" type="Button" parent="Main/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Exit
"

[node name="Controls" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="Controls"]
layout_mode = 2
offset_right = 640.0
offset_bottom = 360.0
texture = ExtResource("6_3w5nb")
expand_mode = 3

[node name="BackButton" type="Button" parent="Controls"]
layout_mode = 2
offset_left = 30.0
offset_top = 15.0
offset_right = 96.0
offset_bottom = 58.0
size_flags_horizontal = 0
size_flags_vertical = 0
size_flags_stretch_ratio = 0.0
theme_override_font_sizes/font_size = 17
text = "Back"
icon = ExtResource("7_amb55")
expand_icon = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_s81hi")
autoplay = true

[connection signal="pressed" from="Main/MarginContainer/VBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="Main/MarginContainer/VBoxContainer/ControlsButton" to="." method="_on_controls_button_pressed"]
[connection signal="pressed" from="Main/MarginContainer/VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="Controls/BackButton" to="." method="_on_back_button_pressed"]
